--- a/src/components/ContactMe/ContactMe.css
+++ b/src/components/ContactMe/ContactMe.css
@@ -35,6 +35,11 @@
   height: 50px;
   max-width: 700px;
   background-color: var(--bg-form-control);
+  color: var(--color-divider);
+}
+.field:focus {
+  background-color: var(--bg-form-control);
+  color: var(--color-divider);
 }
 
 .validation-container {
